Fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,7 +187,7 @@ a:hover {
     }
 
     .tag {
-        margin-bottom: 4px;
+        margin-bottom: 8px;
         line-height: 1.2;  /* Tighter line height for tags */
     }
 
